@@ -38,11 +38,12 @@ parser_test_SOURCES = \
 
 INCLUDES = \
 	$(WNCK_CFLAGS) \
-	-DDEVILSPIE_LOCALEDIR=\""$(datadir)/locale"\" \
+	-DLOCALEDIR=\""$(datadir)/locale"\" \
 	-DDATADIR=\""$(datadir)"\" \
-	-DWNCK_I_KNOW_THIS_IS_UNSTABLE \
-	-DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED \
-	-DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED
+	-DG_DISABLE_DEPRECATED \
+	-DGDK_DISABLE_DEPRECATED \
+	-DGTK_DISABLE_DEPRECATED \
+	-DWNCK_I_KNOW_THIS_IS_UNSTABLE
 
 AM_CFLAGS = -Wall
 
